fix title alignement

--- a/src/Resources/Style/Sass/offer.sass
+++ b/src/Resources/Style/Sass/offer.sass
@@ -15,6 +15,8 @@
     margin-bottom: 20px
 
     .info-container
+      h2
+        text-align: left
       .contact-section
         margin-top: 20px
         display: flex
@@ -38,7 +40,8 @@
 @media screen and (max-width: 1400px)
   .offer
     width: 90vw
-    margin: 10px 0px
+    margin: 10px 0
+
     .image-container
       img
         width: 50vw !important
